fixed buttons overlapping each other in nav

--- a/public/styles/site/blog.less
+++ b/public/styles/site/blog.less
@@ -79,7 +79,7 @@ a, button
 }
 
 @media screen and (max-width:500px) {
-	.home-template .menu-toggle {
+	.tag-template .menu-toggle, .home-template .menu-toggle {
 		padding: 11px 10px;
 	}
 }
